# surl

./: CLAUDE.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: e2e_network.rs  golden.rs
crates/cli/tests/fixtures/: landing.html  landing.tree  readaware-shell.html  readaware-shell.tree  spa-vanilla.html  spa-vanilla.tree
crates/core/: Cargo.toml
crates/core/src/: cookies.rs  fetch.rs  lib.rs  localstorage.rs  markdown.rs  net.rs
crates/core/src/semantic/: diff.rs  extract.rs  ir.rs  mod.rs
crates/dom/: Cargo.toml
crates/dom/src/: lib.rs  parser.rs  select.rs  serialize.rs  tree.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bootstrap.js  event_loop.rs  lib.rs  modules.rs  net.rs  ops.rs
crates/runtime/tests/: corpus.rs  settle.rs  wpt_runner.rs
crates/runtime/tests/corpus/frameworks/next/: _not-found.html  _not-found.txt  index.html  index.txt
crates/runtime/tests/corpus/frameworks/next/_next/static/chunks/: 13-wskyzwkcxc.css
crates/runtime/tests/corpus/frameworks/vite-lit/: index.html
crates/runtime/tests/corpus/frameworks/vite-lit/assets/: index-CblIOpTA.js
crates/runtime/tests/corpus/frameworks/vite-react/: index.html
crates/runtime/tests/corpus/frameworks/vite-svelte/: index.html
crates/runtime/tests/corpus/frameworks/vite-svelte/assets/: index-BiZwmdZ4.js
crates/runtime/tests/corpus/frameworks/vite-vue/: index.html
crates/runtime/tests/corpus/frameworks/vite-vue/assets/: index-qZhddVDM.js
crates/runtime/tests/corpus/readaware.app/: index.html
crates/runtime/tests/corpus/readaware.app/assets/: index-BU-LSR33.js  index-X97rUvUP.js
crates/runtime/tests/wpt/: expectations.json
crates/runtime/tests/wpt/resources/: WPT-COMMIT.txt  testharnessreport.js
docs/: m3-boss-fight.md
tools/: compare_chrome.py  sweep.py
