[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# 内部 crate
surl-core = { path = "crates/core" }
surl-dom = { path = "crates/dom" }
surl-runtime = { path = "crates/runtime" }

# JS 引擎(quickjs-ng,经 rquickjs FFI 绑定)
rquickjs = { version = "0.12", features = ["loader"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTML 解析与 DOM
html5ever = "0.39"
slotmap = "1"
selectors = "0.39"
cssparser = "0.37"

# 异步与网络
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "cookies"] }
url = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误与日志
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
