[package]
name = "surl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "surl"
path = "src/main.rs"

[dependencies]
surl-core.workspace = true
surl-dom.workspace = true
surl-runtime.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
