[package]
name = "surl-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surl-dom.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
