[package]
name = "surl-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surl-dom.workspace = true
surl-runtime.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
rookie = "0.5.6"
rusty-leveldb = { version = "4.0.1", default-features = false, features = ["fs"] }

[dev-dependencies]
serde_json.workspace = true
