[package]
name = "surl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surl-dom.workspace = true
rquickjs.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
serde_json.workspace = true
futures-util = "0.3"

[dev-dependencies]
surl-core.workspace = true
tokio.workspace = true
